minio/s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-service
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: minio
