minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.treant.dev
        - s3.treant.dev
      secretName: letsencrypt-staging
  rules:
    - host: minio.treant.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 43087
    - host: s3.treant.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-service
                port:
                  number: 9000
